Task5/admin-back-end-api-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-back-end-api-app
spec:
  replicas: 1
  selector:
    matchLabels:
      role: admin-back-end-api
  template:
    metadata:
      labels:
        role: admin-back-end-api
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: admin-back-end-api-app
spec:
  selector:
    role: admin-back-end-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
