Task5/admin-front-end-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-front-end-app
spec:
  replicas: 1
  selector:
    matchLabels:
      role: admin-front-end
  template:
    metadata:
      labels:
        role: admin-front-end
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: admin-front-end-app
spec:
  selector:
    role: admin-front-end
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
